--- a/paginas/ferroviaria.html
+++ b/paginas/ferroviaria.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Associação Ferroviária de Esportes</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Associação Ferroviária de Esportes</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="atletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/ferroviaria.png" alt="Escudo da Associação Ferroviária de Esportes" class="brasao" />
+    <h2>História da Associação Ferroviária de Esportes</h2>
+    <p>A Associação Ferroviária de Esportes, também conhecida como Ferroviária, é um clube esportivo brasileiro com sede em Araraquara, São Paulo. Foi fundada em 12 de abril de 1950 por funcionários da Estrada de Ferro Araraquara (EFA). O clube tem uma forte ligação com a história da ferrovia na região, sendo que seu nome e identidade visual refletem essa origem. </p>
 
+    <h3>Estádio</h3>
+    <p>A Associação Ferroviária de Esportes, mais conhecida como Ferroviária, manda seus jogos no Estádio Doutor Adhemar Pereira de Barros, popularmente chamado de Arena da Fonte, localizado em Araraquara, São Paulo. O estádio tem capacidade para 25.000 pessoas após reformas.</p>
+
+    <h3>Cores</h3>
+    <p>As cores do brasão da Associação Ferroviária de Esportes são grená e branco.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
