--- a/paginas/amazonas.html
+++ b/paginas/amazonas.html
@@ -35,7 +35,7 @@
     </nav>
   </header>
   <main>
-    <img src="../imagens/amazonas.png" alt="Escudo do Amazonas Futebol Clube class="brasao" />
+    <img src="../imagens/amazonas.png.png" alt="Escudo do Amazonas Futebol Clube class="brasao" />
     <h2>História do Amazonas Futebol Clube</h2>
     <p>O Amazonas Futebol Clube, conhecido como Amazonas, foi fundado em 23 de maio de 2019, em Manaus, capital do Amazonas. O clube surgiu de uma idealização iniciada em 2017, por Wesley Couto, com a participação de outras pessoas como Willian Abreu e Roberto Peggy. O Amazonas tem como mascote a onça-pintada, que também influencia as cores do clube (amarelo, preto e branco). O principal rival do Amazonas é o Manaus Futebol Clube.</p>
 
