--- a/paginas/botafogo-sp.html
+++ b/paginas/botafogo-sp.html
@@ -1,1 +1,54 @@
 
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Botafogo Futebol Clube</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <header>
+    <h1>Botafogo Futebol Clube</h1>
+    <nav>
+      <ul>
+           <li><a href="index.html">Início</a></li>
+           <li><a href="goias.html">Goiás</a></li>
+           <li><a href="coritiba.html">Coritiba</a></li>
+           <li><a href="novorizontino.html">Novorizontino</a></li>
+           <li><a href="chapecoense.html">Chapecoense</a></li>
+           <li><a href="remo.html">Remo</a></li>
+           <li><a href="criciuma.html">Criciúma</a></li>
+           <li><a href="cuiaba.html">Cuiabá</a></li>
+           <li><a href="avai.html">Avaí</a></li>
+           <li><a href="vilanova.html">Vila Nova</a></li>
+           <li><a href="crb.html">CRB</a></li>
+           <li><a href="athletico-pr.html">Athletico-PR</a></li>
+           <li><a href="athletico-club.html">Athletic Club</a></li>
+           <li><a href="operario-pr.html">Operário-PR</a></li>
+           <li><a href="atletico-go.html">Atlético-GO</a></li>
+           <li><a href="volta-redonda.html">Volta Redonda</a></li>
+           <li><a href="paysandu.html">Paysandu</a></li>
+           <li><a href="ferroviaria.html">Ferroviária</a></li>
+           <li><a href="amazonas.html">Amazonas</a></li>
+           <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <img src="../imagens/botafogo-sp.png" alt="Escudo do Botafogo Futebol Clube" class="brasao" />
+    <h2>História do Botafogo Futebol Clube</h2>
+    <p>O Botafogo Futebol Clube, também conhecido como Botafogo de Ribeirão Preto ou Botafogo-SP, foi fundado em 12 de outubro de 1918 em Ribeirão Preto, São Paulo. O clube surgiu da fusão de três equipes da Vila Tibério: União Paulistano, Tiberense e Ideal Futebol Clube, com o objetivo de fortalecer o futebol local e evitar a dispersão de talentos.</p>
+
+    <h3>Estádio</h3>
+    <p>O Botafogo Futebol Clube joga no Estádio Santa Cruz Arena Nicnet, localizado em Ribeirão Preto, São Paulo, Brasil. Com capacidade de 28.946 torcedores.</p>
+
+    <h3>Cores</h3>
+    <p>As cores do escudo do Botafogo Futebol Clube (de Ribeirão Preto, SP) são vermelho, branco e preto.</p>
+  </main>
+  <footer>
+    <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
+  </footer>
+</body>
+</html>
+
