--- a/paginas/index.html
+++ b/paginas/index.html
@@ -33,6 +33,7 @@
                 <li><a href="ferroviaria.html">Ferroviária</a></li>
                 <li><a href="amazonas.html">Amazonas</a></li>
                 <li><a href="botafogo-sp.html">Botafogo-SP</a></li>
+                <li><a href="america-mg.html">América-MG</a></li>
             </ul>
         </nav>
     </header>
