--- a/paginas/america-mg.html
+++ b/paginas/america-mg.html
@@ -39,12 +39,13 @@
   <main>
     <img src="../imagens/america-mg.png" alt="Escudo do América Futebol Clube" class="brasao" />
     <h2>História do América Futebol Clube</h2>
-    <p></p>
+    <p>O América Futebol Clube, conhecido como América-MG, é um clube de futebol brasileiro fundado em 30 de abril de 1912, em Belo Horizonte, Minas Gerais. Inicialmente, o clube era alviverde, mas logo adotou também a cor preta, tornando-se conhecido como "Coelho". O América-MG tem uma história rica no futebol mineiro, com destaque para o período em que foi deca-campeão estadual, de 1916 a 1925.</p>
+   
     <h3>Estádio</h3>
-    <p></p>
+    <p>O América Futebol Clube, também conhecido como América-MG, joga suas partidas em casa na Arena Independência, também chamada de Estádio Raimundo Sampaio, em Belo Horizonte. O estádio tem capacidade para aproximadamente 23.018 espectadores. </p>
 
     <h3>Cores</h3>
-    <p></p>
+    <p>As cores do brasão do América Mineiro são verde, preto e branco.</p>
   </main>
   <footer>
     <p>© Pérola Fontana Corchog - Colégio Unidade Polo 2025</p>
